<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.UpdateObject">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_cold_drink_details"
        android:id="@+id/txtSelectObjectUpdate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEnterCurrentID"
        android:inputType="number"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="250dp"
        android:hint="@string/enter_id_to_update"
        android:maxLines="1"
        android:layout_below="@+id/txtSelectObjectUpdate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNewName"
        android:inputType="text"
        android:layout_below="@+id/txtEnterCurrentID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="250dp"
        android:hint="@string/enter_new_name"
        android:maxLines="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNewPrice"
        android:inputType="numberDecimal"
        android:layout_below="@+id/txtNewName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="250dp"
        android:hint="@string/enter_new_price"
        android:maxLines="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmitUpdate"
        android:layout_below="@+id/txtNewPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="100dp"
        android:height="50dp"
        android:onClick="onBtnSubmitUpdateClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/btnReadDataHome"
        android:width="100dp"
        android:height="50dp"
        android:onClick="onBtnReadDataHomeClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
